--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   get: ^4.3.8
   flutter_easyloading: ^3.0.3
   google_fonts: ^2.1.0
+  shared_preferences: ^2.0.9
+  fluttertoast: ^8.0.8
+  material_design_icons_flutter: ^5.0.6295
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
