--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   shared_preferences: ^2.0.9
   fluttertoast: ^8.0.8
   material_design_icons_flutter: ^5.0.6295
+  timeago: ^3.1.0
+  group_list_view: ^1.1.1
+  lottie: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/lotties/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
