--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   timeago: ^3.1.0
   group_list_view: ^1.1.1
   lottie: ^1.2.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
