--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   lottie: ^1.2.1
   intl: ^0.17.0
   skeleton_loader: ^2.0.0+4
+  turkish:
+    git:
+      url: git://github.com/uyarburak/turkish.git
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +73,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
     - assets/icons/
+    - assets/images/
+    - assets/json/
     - assets/lotties/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
