--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
       url: git://github.com/uyarburak/turkish.git
   onesignal_flutter: ^3.2.7
   snapping_sheet: ^3.1.0
+  signalr_core: ^1.1.1
 
 dev_dependencies:
   flutter_test:
