--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.3.8
+  get: ^4.6.1
   flutter_easyloading: ^3.0.3
   google_fonts: ^2.1.0
   shared_preferences: ^2.0.9
@@ -52,6 +52,7 @@ dependencies:
   onesignal_flutter: ^3.2.7
   snapping_sheet: ^3.1.0
   signalr_core: ^1.1.1
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
