register endpoint added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   signalr_core: ^1.1.1
   flutter_svg: ^1.0.3
   flutter_feather_icons: ^2.0.0+1
+  blobs: ^2.0.0
 
 dev_dependencies:
   flutter_test:
